@@ -1,3 +1,12 @@
+2007-04-07  Aaron Stone  <aaron@serendipity.cx>
+
+	* pool.h, pool.c, lmtp.c, pop3.c, timsieve.c, imapcommands.c,
+	serverchild.c:
+	Further work on the scoreboard status output, and added currently
+	logged in user (pop3, imap, timsieve) or mail sender (lmtp)
+	* main.c, serverparent.c, dbmail-user.c:
+	Added definitions for yes_to_all, no_to_all, etc.
+
 2007-04-06  Paul J Stevens <paul@nfg.nl>
 	
 	* README.usermap, UPGRADING:
